Add GET /auth/access for validating twitch user access tokens
